--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,26 @@ main {
 }
 
 body {
-    /*background: black;*/
+    background: black;
+}
+
+.config-menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: white;
+    padding: 20px 30px;
+    min-width: 300px;
+}
+
+.config-menu-header {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.slider-config {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
 }
