--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,10 @@ body {
     background: white;
     padding: 20px 30px;
     min-width: 300px;
+    transition: 0.2s all;
 }
 
-.config-menu-header {
+.menu-header {
     font-size: 1.2em;
     font-weight: bold;
     margin-bottom: 5px;
@@ -28,4 +29,21 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
+}
+
+.checkbox-menu {
+    white-space: nowrap;
+    display: grid;
+    grid-template-columns: 120px min-content;
+    gap: 10px;
+    align-items: center;
+}
+
+.config-menu.hidden {
+    opacity: 0;
+}
+
+.closer {
+    padding: 5px 0 5px 0;
+    cursor: pointer;
 }
